# VE482_Project_1

./: .gitignore  README.md  log
p1_0.1/: CMakeLists.txt  function.c  function.h  p1.c  p1.h  p1.tar
p1_0.2/: function.c  function.h  p1.h  read_parse.h
p1_0.2/try/: try  try.c
p1_0.3/: function.c  function.h  p1.c  read_parse.c  read_parse.h
p1_1.0/: p1.c  read_parse.c
try/: mumsh  try  try.c
